fix hamburger menu overlapping hamburger icon and cross icon on opening and closing

--- a/css/style.css
+++ b/css/style.css
@@ -475,7 +475,7 @@ main {
     display: flex;
     align-items: flex-start;
     position: fixed;
-    top: 10rem;
+    top: 12rem;
     right: 0;
     max-width: 15.5rem;
     list-style-type: none;
